implement best practices (#2650)
* implement best practices

* fix: CodeRabbit auto-fixes for PR #2650 (#2651)

* fix: apply CodeRabbit auto-fixes

Fixed 8 file(s) based on 7 unresolved review comments.

Co-authored-by: CodeRabbit <noreply@coderabbit.ai>

* Change expected price type in OrderControllerIT

* fix : issue

* fix : test failure

* Fix formatting of page number calculation in PageUtils

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: CodeRabbit <noreply@coderabbit.ai>
Co-authored-by: Raja Kolli <rajadilipkolli@gmail.com>

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: CodeRabbit <noreply@coderabbit.ai>